Improvemed Hazelcast integration.